removed api key

--- a/djangoai/djangoai/templates/map.html
+++ b/djangoai/djangoai/templates/map.html
@@ -143,7 +143,7 @@
       for more information.
       -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0sLyHCDoAi4BQKskFwdCE4hXLJfd973E&callback=initMap&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=KEY&callback=initMap&v=weekly"
       defer
     ></script>
   </body>
